finished but no styling

--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Test</title>
+  <title>Acme Explosives</title>
 </head>
 <body>
-    <button id="all" class="btn btn-outline-dark">All</button>
+    <div id='product-cards'></div>
   
 </body>
 </html>
